<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/listview_show_pic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_image_with_size"/>
            <ImageView
                android:id="@+id/img_one"
                android:layout_width="150dp"
                android:layout_height="200dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_image_with_code"/>
            <ImageView
                android:id="@+id/img_two"
                android:layout_width="150dp"
                android:layout_height="100dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_native_image"/>
            <ImageView
                android:id="@+id/img_three"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crop_image"/>
            <ImageView
                android:id="@+id/img_four"
                android:layout_width="150dp"
                android:layout_height="150dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
